--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -117,6 +117,8 @@
 
       &__search-bar {
         form {
+          position: relative;
+
           input {
             width: 400px;
             border: none;
@@ -134,6 +136,13 @@
 
           input:focus::placeholder {
             color: transparent;
+          }
+
+          span {
+            color: #000;
+            position: absolute;
+            top: 0.25rem;
+            right: 0.5rem;
           }
         }
       }
@@ -184,13 +193,10 @@
       }
 
       .mode-icon:hover,
-      .search-icon:hover,
       .user-icon:hover,
       .close-icon:hover,
-      .login-icon:hover,
-      .menu-icon:hover,
-      .home-icon:hover {
-        color: var(--red);
+      .login-icon:hover {
+        color: var(--primary);
         transition: var(--transition);
       }
     }
