--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -87,9 +87,10 @@
         p,
         span,
         a {
+          font-weight: 400;
           margin: 0;
           height: min-content;
-          font-size: 0.9rem;
+          font-size: 1rem;
           padding: 0.5rem 1rem;
           margin-right: 1rem;
           margin-bottom: 1rem;
@@ -160,20 +161,12 @@
 
         &__inner {
           grid-template-columns: repeat(auto-fill, minmax(159px, 1fr));
-
-          span {
-            font-size: 0.8rem;
-          }
         }
       }
 
       &__category {
         &__inner {
           grid-template-columns: repeat(auto-fill, minmax(159px, 1fr));
-
-          span {
-            font-size: 0.8rem;
-          }
         }
       }
     }
@@ -187,10 +180,6 @@
       &__genre {
         &__inner {
           grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-
-          span {
-            font-size: 0.8rem;
-          }
         }
       }
     }
@@ -218,6 +207,6 @@
 
 /* Handle */
 .scroll::-webkit-scrollbar-thumb {
-  background-color: var(--red);
+  background-color: var(--primary);
   //border-radius: 20px;
 }
