--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -18,10 +18,11 @@
       display: flex;
       align-items: center;
       padding: 0.5rem 1rem;
-      background: var(--red);
-      color: #fff;
+      background: var(--primary);
+      color: #000;
       cursor: pointer;
       margin-bottom: 2rem;
+      font-weight: var(--font-weight-2);
     }
 
     .back:hover {
@@ -71,14 +72,13 @@
         padding: 0.6rem;
         width: 97%;
         font-size: var(--font-size-1);
-        font-weight: var(--font-weight-2);
+        font-weight: var(--font-weight-3);
 
         display: flex;
         align-items: center;
         justify-content: center;
 
-        // background: var(--red);
-        color: #fff;
+        color: #000;
       }
 
       button:hover {
