--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -259,6 +259,7 @@ body {
 @import '../components/Header/header';
 @import '../components/Header/SmallHeader/smallHeader';
 @import '../components/Header/Logout/logout';
+@import '../components/Search/search';
 
 @import '../components/MovieList/movieList';
 @import '../components/MovieList/MovieCard/movieCard';
