--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -36,7 +36,7 @@
         color: #000;
         font-weight: var(--font-weight-5);
         font-size: 1.5rem;
-        border-radius: 5px;
+        // border-radius: 5px;
       }
 
       .close-icon {
