--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -15,8 +15,8 @@
       background: #fff;
       color: #000;
       height: 30.4px;
-      border-top-left-radius: 5px;
-      border-bottom-left-radius: 5px;
+      // border-top-left-radius: 5px;
+      // border-bottom-left-radius: 5px;
 
       span {
         padding: 0.25rem 0.5rem;
@@ -36,7 +36,7 @@
       z-index: -1;
       //height: 30.4px;
       box-shadow: 0px 2px 4px #000;
-      border-radius: 5px;
+      // border-radius: 5px;
     }
 
     .remaining:hover {
@@ -54,8 +54,8 @@
         border: none;
         padding: 0 1rem;
         height: 30.4px;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
+        // border-top-right-radius: 5px;
+        // border-bottom-right-radius: 5px;
       }
 
       input:focus {
