--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -36,6 +36,7 @@
         color: #000;
         font-weight: var(--font-weight-5);
         font-size: 1.5rem;
+        border-radius: var(--border-radius-1);
       }
 
       .close-icon {
@@ -97,6 +98,7 @@
           cursor: pointer;
           display: flex;
           text-transform: capitalize;
+          border-radius: var(--border-radius-1);
         }
 
         p,
