--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -3,8 +3,7 @@
   height: 350px;
   position: relative;
   user-select: none;
-  //box-shadow: 5px 5px 5px #000;
-  //box-shadow: 0 0 1px #111;
+  border-radius: var(--border-radius-1);
 
   &--image {
     width: 100%;
@@ -18,19 +17,17 @@
   &__delete__btn {
     position: absolute;
     z-index: 1;
-    left: 0.2rem;
-    top: -0.8rem;
+    top: -1rem;
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background: rgb(0, 0, 0, 0.4);
-    //box-shadow: 1px 1px 3px #333;
+    background: rgb(0, 0, 0, 0.8);
+    box-shadow: 1px 1px 3px #000;
     color: #fff;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
 
     &--icon {
-      border-radius: 50%;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -93,6 +90,7 @@
       margin-bottom: 1rem;
       padding: 0.5rem 1rem;
       font-weight: 400;
+      border-radius: var(--border-radius-1);
     }
 
     &--more:hover {
