--- a/client/src/components/MovieList/Pagination/_pagination.scss
+++ b/client/src/components/MovieList/Pagination/_pagination.scss
@@ -12,7 +12,7 @@
     border: none;
     height: 30px;
     width: 30px;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-1);
     cursor: pointer;
   }
 
@@ -29,10 +29,12 @@
   }
 }
 
-// .activeBtn {
-//   background: var(--primary);
-//   color: #fff;
-// }
+.activeBtn {
+  font-weight: 900 !important;
+  background: var(--primary);
+  color: #000;
+  pointer-events: none;
+}
 
 .disabledBtn {
   pointer-events: none;
