--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -15,6 +15,8 @@
       background: #fff;
       color: #000;
       height: 30.4px;
+      border-top-left-radius: var(--border-radius-1);
+      border-bottom-left-radius: var(--border-radius-1);
 
       span {
         padding: 0.25rem 0.5rem;
@@ -33,6 +35,7 @@
       color: #000;
       z-index: -1;
       box-shadow: 0px 2px 4px #000;
+      border-radius: var(--border-radius-1);
     }
 
     .remaining:hover {
@@ -42,6 +45,9 @@
   }
 
   &__search-bar {
+    display: flex;
+    align-items: center;
+
     form {
       position: relative;
 
@@ -50,6 +56,8 @@
         border: none;
         padding: 0 1rem;
         height: 30.4px;
+        border-top-right-radius: var(--border-radius-1);
+        border-bottom-right-radius: var(--border-radius-1);
       }
 
       input:focus {
@@ -70,6 +78,18 @@
         top: 0.35rem;
         right: 0.5rem;
       }
+    }
+
+    .mode-icon {
+      color: #fff;
+      cursor: pointer;
+      margin-left: 1rem;
+      margin-bottom: -0.25rem;
+    }
+
+    .mode-icon:hover {
+      color: var(--primary);
+      transition: var(--transition);
     }
   }
 }
@@ -103,7 +123,7 @@
     &__search-bar {
       form {
         input {
-          width: 210px;
+          width: 170px;
         }
       }
     }
