--- a/client/src/components/TvList/Pagination/_pagination.scss
+++ b/client/src/components/TvList/Pagination/_pagination.scss
@@ -12,7 +12,7 @@
     border: none;
     height: 30px;
     width: 30px;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-1);
     cursor: pointer;
   }
 
@@ -25,6 +25,7 @@
 }
 
 .activeBtn {
+  font-weight: 900 !important;
   background: var(--primary);
   color: #000;
   pointer-events: none;
