--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -11,10 +11,11 @@
       cursor: pointer;
       text-transform: capitalize;
       display: flex;
+      align-items: center;
       justify-content: space-between;
       background: #fff;
       color: #000;
-      height: 30.4px;
+      height: 32px;
       border-top-left-radius: var(--border-radius-1);
       border-bottom-left-radius: var(--border-radius-1);
 
@@ -54,8 +55,8 @@
       input {
         width: 400px;
         border: none;
-        padding: 0 1rem;
-        height: 30.4px;
+        padding: 0.5rem 1rem;
+        //height: 30.4px;
         border-top-right-radius: var(--border-radius-1);
         border-bottom-right-radius: var(--border-radius-1);
       }
@@ -123,7 +124,7 @@
     &__search-bar {
       form {
         input {
-          width: 170px;
+          width: 150px;
         }
       }
     }
