--- a/client/src/components/Header/SmallHeader/_smallHeader.scss
+++ b/client/src/components/Header/SmallHeader/_smallHeader.scss
@@ -40,10 +40,10 @@
     &__options {
       width: 100vw;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
 
       .title {
-        //display: none;
+        display: none;
       }
     }
   }
