--- a/client/src/pages/Register/_register.scss
+++ b/client/src/pages/Register/_register.scss
@@ -96,7 +96,6 @@
         a {
           text-decoration: none;
           margin-left: 0.2rem;
-          //color: var(--gold);
           font-weight: 700;
         }
       }
@@ -115,7 +114,16 @@
 
         font-weight: 500;
         font-size: 1.1rem;
-        //color: var(--red);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .register {
+    &__inner {
+      &__form {
+        width: 250px;
       }
     }
   }
