--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -21,8 +21,8 @@
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background: rgb(0, 0, 0, 0.8);
-    box-shadow: 1px 1px 3px #000;
+    background: rgb(0, 0, 0, 1);
+    //box-shadow: 1px 1px 3px #000;
     color: #fff;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
@@ -35,12 +35,12 @@
     }
   }
 
-  &__btn:hover,
-  &__add__btn:hover,
-  &__delete__btn:hover {
-    background: var(--red);
-    transition: var(--transition);
-  }
+  // &__btn:hover,
+  // &__add__btn:hover,
+  // &__delete__btn:hover {
+  //   filter: brightness(120%);
+  //   transition: var(--transition);
+  // }
 
   &__info {
     text-decoration: none;
@@ -123,6 +123,28 @@
     height: 280px;
     &--image {
       height: 280px;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .card {
+    &__info {
+      &--rating {
+        font-size: 0.8rem;
+      }
+      &__inner {
+        &--title {
+          font-size: 0.9rem;
+        }
+        &--date {
+          font-size: 0.8rem;
+        }
+      }
+
+      &--more {
+        font-size: 0.8rem;
+      }
     }
   }
 }
