--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -150,7 +150,20 @@
       display: none;
     }
 
+    &__sort-activeOption {
+      margin: 0 1.25rem 0 1rem;
+
+      .activeOption {
+        font-size: 1rem;
+      }
+    }
+
     &__movies {
+      margin: 4rem 1rem 3rem 1rem;
+
+      grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      gap: 2rem 1rem;
+
       margin-top: 2rem;
     }
   }
