--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -100,7 +100,6 @@
         a {
           text-decoration: none;
           margin-left: 0.2rem;
-          //color: var(--gold);
           font-weight: 700;
         }
       }
@@ -119,7 +118,16 @@
 
         font-weight: 500;
         font-size: 1.1rem;
-        //color: var(--red);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .login {
+    &__inner {
+      &__form {
+        width: 250px;
       }
     }
   }
