--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -18,10 +18,10 @@
   --white-2: rgb(220, 220, 220);
 
   --dark-1: #393e46;
-  --dark-1: #333333;
+  //--dark-1: #333333;
   --dark-2: #222831;
-  --dark-2: #222222;
-  --dark-2: #1f1f1f;
+  //--dark-2: #222222;
+  //--dark-2: #1f1f1f;
 
   --whiteAlpha-1: rgba(255, 255, 255, 0.5);
   --whiteAlpha-2: rgba(220, 220, 220, 0.5);
