--- a/client/src/other/Loading/_loading.scss
+++ b/client/src/other/Loading/_loading.scss
@@ -1,8 +1,8 @@
 .loader {
   border: 5px solid transparent;
   border-radius: 50%;
-  border-top: 5px solid #555;
-  border-bottom: 5px solid #555;
+  // border-top: 5px solid #555;
+  // border-bottom: 5px solid #555;
   width: 50px;
   height: 50px;
   -webkit-animation: spin 1.5s linear infinite;
@@ -26,4 +26,14 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.lightLoading {
+  border-top: 5px solid #fff;
+  border-bottom: 5px solid #fff;
+}
+
+.darkLoading {
+  border-top: 5px solid var(--dark-2);
+  border-bottom: 5px solid var(--dark-2);
 }
