--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -272,6 +272,8 @@ body {
 @import '../components/TvList/Pagination/pagination';
 @import '../components/Menu/menu';
 
+@import '../components/SearchResults/searchResults';
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
