--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -45,12 +45,14 @@
         transition: var(--transition);
       }
 
-      .menu-icon {
+      .menu-icon,
+      .mode-icon {
         font-weight: 500;
         display: flex;
         flex-direction: row;
         align-items: center;
         cursor: pointer;
+        margin-right: 1rem;
       }
 
       .menu-icon:hover {
