--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -1,6 +1,53 @@
 .search__results {
   width: 100%;
-  padding: 0.5rem 1rem;
   position: absolute;
   top: 2.2rem;
+  max-height: 500px;
+  overflow-y: scroll;
+  box-shadow: 0px 15px 10px -15px #111;
+
+  // background: #000;
+  // color: #fff;
+
+  &__inner {
+    padding: 0.5rem 1rem;
+
+    display: flex;
+    flex-direction: column;
+
+    &__card {
+      display: flex;
+      &__image {
+        margin-right: 0.5rem;
+        img {
+          height: 75px;
+        }
+      }
+
+      &__title-date {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+}
+
+.scroll-1 {
+  overflow-y: scroll;
+}
+/* width */
+.scroll-1::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.scroll-1::-webkit-scrollbar-track {
+  background: rgb(180, 180, 180);
+  background: transparent;
+}
+
+/* Handle */
+.scroll-1::-webkit-scrollbar-thumb {
+  background-color: gray;
+  //border-radius: 20px;
 }
