--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -67,8 +67,9 @@
     .category-title,
     .genre-title {
       font-size: 1.2rem;
-      font-weight: 500;
+      font-weight: 400;
       padding-left: 2rem;
+      color: var(--primary);
     }
 
     &__genre,
@@ -82,8 +83,11 @@
       &__inner {
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
         gap: 0rem;
+
+        // display: flex;
+        // flex-wrap: wrap;
 
         p,
         span,
@@ -92,7 +96,7 @@
           margin: 0;
           height: min-content;
           font-size: 1rem;
-          padding: 0.5rem 1rem;
+          //padding: 0.5rem 1rem;
           margin-right: 1rem;
           margin-bottom: 1rem;
           cursor: pointer;
@@ -113,7 +117,7 @@
             color: #fff;
             width: 25px;
             text-align: center;
-            padding: 0.25rem;
+            //padding: 0.25rem;
             margin: 0 0.5rem 0 0;
             text-transform: capitalize;
           }
@@ -128,7 +132,7 @@
         p:hover,
         span:hover,
         a:hover {
-          filter: brightness(80%);
+          letter-spacing: 2px;
           transition: var(--transition);
         }
       }
