--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -1,4 +1,5 @@
 .search__component {
+  width: 100%;
   position: relative;
   display: flex;
 
@@ -16,7 +17,7 @@
       justify-content: space-between;
       background: #fff;
       color: #000;
-      height: 32px;
+      height: 36px;
       border-top-left-radius: var(--border-radius-1);
       border-bottom-left-radius: var(--border-radius-1);
 
@@ -28,7 +29,7 @@
     .remaining {
       font-weight: 400;
       cursor: pointer;
-      padding: 0.325rem 0.5rem;
+      padding: 0.5rem 0.5rem;
       width: 84%;
       text-transform: capitalize;
       position: absolute;
@@ -56,7 +57,7 @@
       input {
         width: 400px;
         border: none;
-        padding: 0.5rem 1rem;
+        padding: 0.62rem 1rem;
         //height: 30.4px;
         border-top-right-radius: var(--border-radius-1);
         border-bottom-right-radius: var(--border-radius-1);
@@ -77,7 +78,7 @@
       span {
         color: #555;
         position: absolute;
-        top: 0.35rem;
+        top: 0.45rem;
         right: 0.5rem;
       }
     }
@@ -110,10 +111,14 @@
 
 @media screen and (max-width: 786px) {
   .search__component {
+    display: none;
+    width: calc(100vw - (88.58px + 3rem));
     &__search-bar {
+      width: calc(100vw - (88.58px + 3rem));
       form {
+        width: calc(100vw - (88.58px + 3rem));
         input {
-          //width: 400px;
+          width: calc(100vw - (88.58px + 3rem + 100px + 2rem));
         }
       }
     }
@@ -122,10 +127,13 @@
 
 @media screen and (max-width: 640px) {
   .search__component {
+    width: calc(100vw - (60px + 3rem));
     &__search-bar {
+      width: calc(100vw - (60px + 3rem));
       form {
+        width: calc(100vw - (60px + 3rem));
         input {
-          width: 170px;
+          width: calc(100vw - (60px + 3rem + 100px + 1.5rem));
         }
       }
     }
