--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -1,33 +1,55 @@
 .search__results {
   width: 100%;
   position: absolute;
-  top: 2.2rem;
+  top: 2.5rem;
   max-height: 500px;
   overflow-y: scroll;
-  box-shadow: 0px 15px 10px -15px #111;
-
-  // background: #000;
-  // color: #fff;
+  //box-shadow: 0px 15px 10px -15px #111;
+  border-bottom: 5px solid var(--primary);
+  border-radius: var(--border-radius-1);
 
   &__inner {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem;
 
     display: flex;
     flex-direction: column;
 
     &__card {
+      cursor: pointer;
+      padding: 0.5rem;
       display: flex;
+      border-radius: var(--border-radius-1);
+
       &__image {
+        height: 75px;
         margin-right: 0.5rem;
+        border-radius: var(--border-radius-1);
+
         img {
           height: 75px;
+          border-radius: var(--border-radius-1);
         }
       }
 
       &__title-date {
         display: flex;
         flex-direction: column;
+
+        span:first-child {
+          font-size: 1rem;
+          font-weight: 500;
+        }
+
+        span:last-child {
+          font-size: 0.9rem;
+          font-weight: 400;
+        }
       }
+    }
+
+    &__card:hover {
+      filter: brightness(80%);
+      transition: var(--transition);
     }
   }
 }
@@ -42,12 +64,10 @@
 
 /* Track */
 .scroll-1::-webkit-scrollbar-track {
-  background: rgb(180, 180, 180);
   background: transparent;
 }
 
 /* Handle */
 .scroll-1::-webkit-scrollbar-thumb {
   background-color: gray;
-  //border-radius: 20px;
 }
