--- a/client/src/components/TvList/TvCard/_tvCard.scss
+++ b/client/src/components/TvList/TvCard/_tvCard.scss
@@ -129,6 +129,10 @@
 
 @media screen and (max-width: 640px) {
   .card {
+    height: 250px;
+    &--image {
+      height: 250px;
+    }
     &__info {
       &--rating {
         font-size: 0.8rem;
