--- a/client/src/components/TvList/Sort/_sort.scss
+++ b/client/src/components/TvList/Sort/_sort.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius-1);
-    box-shadow: 5px 8px 10px #000;
+    //box-shadow: 0 8px 6px -6px black;
 
     opacity: 0;
     transition: var(--transition);
@@ -72,9 +72,3 @@
     }
   }
 }
-
-// @media screen and (max-width: 375px) {
-//   .sort {
-//     left: 25%;
-//   }
-// }
