--- a/client/src/other/Options/_options.scss
+++ b/client/src/other/Options/_options.scss
@@ -16,10 +16,6 @@
     padding: 0.5rem 1rem;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-left-radius: var(--border-radius-1);
-
-    &__icon {
-      //margin-left: 1rem;
-    }
   }
 
   &__option {
@@ -29,11 +25,9 @@
     width: 80px;
     text-transform: capitalize;
     position: absolute;
-    top: 2.05rem;
-    background: #fff;
-    color: #000;
+    top: 2.5rem;
     z-index: -1;
-    box-shadow: 0px 2px 4px #000;
+    //box-shadow: 0px 2px 4px #000;
     border-radius: var(--border-radius-1);
   }
 
